# IntegrationsAgentPOC

./: .gitignore  CLEANUP.md  FIXED.md  README-refactoring.md  README.md  REFACTORING.md  ReadMe.md  agentic_workflow.ps1  architecture-readme.md  classifiers.txt  cleanup.sh  cleanup_script.ps1  component-hierarchy-readme.md  conftest.py  custom_config_no_docker.yaml  data-flow-readme.md  dev_bootstrap.ps1  developer-readme.md  direct-test.ps1  llm-agents-readme.md  my_config.yaml  optional-dependencies.txt  overview-readme.md  pyproject.toml  pytest.ini  recovery.py.bak  requirements-python.txt  requirements.txt  scripts.txt  setup.py  standalone_workflow.py  test_knowledge_workflow.py  test_llm_workflows.py  test_template.py  test_verification_workflow.py  test_workflow.py  workflow_config.py.bak  workflow_config.yaml  workflow_history.db
archives/: README.md
docs/: CLEANUP-NOTES.md  INDEX.md  README.md  architecture-readme.md  code_standards.md  component-hierarchy-readme.md  llm-agents-readme.md  message_based_architecture.md  message_based_implementation_guide.md
examples/: direct-test.ps1  enhanced_workflow_test.py  example_workflow.py  standalone_infra_agent.py  standalone_infra_agent_non_interactive.py  test_enhanced_components.py  test_workflow.py
generated_knowledge/: custom-integration_custom_20250321_110140.json  infrastructure-agent_infra_agent_20250321_110134.json
generated_scripts/: custom-integration_install_20250320_134232.sh  infrastructure-agent_install_20250320_132348.ps1  infrastructure-agent_install_20250320_134816.ps1  (+1 more)
plugins/: README.md
(+360 files in other folders)
